--- a/Application.ipynb
+++ b/Application.ipynb
@@ -255,7 +255,7 @@
    "source": [
     "# Application\n",
     "\n",
-    "In this section, we compare the the t-student linear regression model with the classic regression one. For a better vizualization, is considered one explanatory variable. The house prices advanced regression techniques competition is about to predict the sale price of houses in Ames and Iowa. We are considering only the LotArea to see the equation estimated but this model support multiple explanatory variables."
+    "In this section, we compare the t-student linear regression model with the classic regression one. For a better vizualization, is considered one explanatory variable. The house prices advanced regression techniques competition is about to predict the sale price of houses in Ames and Iowa. We are considering only the LotArea to see the equation estimated but this model support multiple explanatory variables."
    ]
   },
   {
