--- a/Application.ipynb
+++ b/Application.ipynb
@@ -111,12 +111,11 @@
     "  numberOfCovariates = dim(X)[2]\n",
     "  n = dim(X)[1]\n",
     "  \n",
-    "  ## Declaring the parameters of the model\n",
+    "  
     "  Beta = matrix(0,steps,numberOfCovariates)\n",
     "  colnames(Beta) = c(paste(\"Beta_\",0:(numberOfCovariates-1),sep=\"\"))\n",
     "  sigma2 = numeric()\n",
     "  \n",
-    "  ## Inicial values\n",
     "  Beta[1,] <- 10\n",
     "  sigma2[1] <- var(y)\n",
     "  \n",
@@ -124,8 +123,7 @@
     "    mu = Beta[step_i-1,]%*%t(X)\n",
     "    Mv <- solve(t(X)%*%X)*sigma2[step_i-1]\n",
     "    mu.beta = solve(t(X)%*%X)%*%t(X)%*%y\n",
-    "    b <- mvrnorm(1,mu.beta,Sigma = Mv)\n",
-    "    Beta[step_i,] <- b\n",
+    "    Beta[step_i,] <- mvrnorm(1,mu.beta,Sigma = Mv)\n",
     "    \n",
     "    mu = Beta[step_i-1,]%*%t(X)\n",
     "    a.sigma = 0.5*n\n",
@@ -220,12 +218,10 @@
     "  numberOfCovariates = dim(X)[2]\n",
     "  n = dim(X)[1]\n",
     "  \n",
-    "  ## Declaring the parameters of the model\n",
     "  Beta = matrix(0,steps,numberOfCovariates)\n",
     "  colnames(Beta) = c(paste(\"Beta_\",0:(numberOfCovariates-1),sep=\"\"))\n",
     "  sigma2 = numeric()\n",
     "  \n",
-    "  ## Inicial values\n",
     "  Beta[1,] <- 10\n",
     "  sigma2[1] <- var(y)\n",
     "  \n",
@@ -236,8 +232,7 @@
     "    \n",
     "    Mv <- solve(t(X)%*%w%*%X)*sigma2[step_i-1]\n",
     "    mu.beta = solve(t(X)%*%w%*%X)%*%t(X)%*%w%*%y\n",
-    "    b <- mvrnorm(1,mu.beta,Sigma = Mv)\n",
-    "    Beta[step_i,] <- b\n",
+    "    Beta[step_i,] <- mvrnorm(1,mu.beta,Sigma = Mv)\n",
     "    \n",
     "    mu = Beta[step_i-1,]%*%t(X)\n",
     "    a.sigma = 0.5*n\n",
