--- a/Application.ipynb
+++ b/Application.ipynb
@@ -107,11 +107,10 @@
    "source": [
     "lm_normal = function(y,x,steps = 5000){\n",
     "  require(MASS)\n",
-    "  X<-as.matrix(cbind.data.frame(1,x))\n",
+    "  X = as.matrix(cbind.data.frame(1,x))\n",
     "  numberOfCovariates = dim(X)[2]\n",
     "  n = dim(X)[1]\n",
     "  \n",
-    "  
     "  Beta = matrix(0,steps,numberOfCovariates)\n",
     "  colnames(Beta) = c(paste(\"Beta_\",0:(numberOfCovariates-1),sep=\"\"))\n",
     "  sigma2 = numeric()\n",
@@ -214,7 +213,7 @@
    "source": [
     "lm_t = function(y,x,v,steps = 5000){\n",
     "  require(MASS)\n",
-    "  X<-as.matrix(cbind.data.frame(1,x))\n",
+    "  X = as.matrix(cbind.data.frame(1,x))\n",
     "  numberOfCovariates = dim(X)[2]\n",
     "  n = dim(X)[1]\n",
     "  \n",
